cleaned code and added to map pop-up

--- a/Live_Map/Mapping_Data.ipynb
+++ b/Live_Map/Mapping_Data.ipynb
@@ -9,10 +9,7 @@
    "source": [
     "# Import the dependencies\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import requests\n",
-    "import gmaps"
+    "import numpy as np"
    ]
   },
   {
