cleaned Mapping Data

--- a/Live_Map/Mapping_Data.ipynb
+++ b/Live_Map/Mapping_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "8b8c9f7f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "c1a50346",
    "metadata": {},
    "outputs": [
@@ -50,16 +50,16 @@
        "      <th>Muslims</th>\n",
        "      <th>Other_Religions</th>\n",
        "      <th>...</th>\n",
-       "      <th>gpd_2010</th>\n",
-       "      <th>gpd_2015</th>\n",
-       "      <th>gdp_per_capita_2000</th>\n",
-       "      <th>gdp_per_capita_2005</th>\n",
        "      <th>gdp_per_capita_2010</th>\n",
        "      <th>gdp_per_capita_2015</th>\n",
        "      <th>mortality_rate_2000</th>\n",
        "      <th>mortality_rate_2005</th>\n",
        "      <th>mortality_rate_2010</th>\n",
        "      <th>mortality_rate_2015</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>mortality_rate</th>\n",
+       "      <th>mortality_state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -76,16 +76,16 @@
        "      <td>80.3</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.192692e+10</td>\n",
-       "      <td>1.138685e+10</td>\n",
-       "      <td>1126.683340</td>\n",
-       "      <td>2673.786584</td>\n",
-       "      <td>4094.348386</td>\n",
-       "      <td>3952.802538</td>\n",
+       "      <td>4094.35</td>\n",
+       "      <td>3952.80</td>\n",
        "      <td>106.1</td>\n",
        "      <td>105.7</td>\n",
        "      <td>103.5</td>\n",
        "      <td>92.24</td>\n",
+       "      <td>19.999962</td>\n",
+       "      <td>41.000028</td>\n",
+       "      <td>9.22</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -100,16 +100,16 @@
        "      <td>97.9</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.612073e+11</td>\n",
-       "      <td>1.659793e+11</td>\n",
-       "      <td>1765.027146</td>\n",
-       "      <td>3113.094883</td>\n",
-       "      <td>4480.786318</td>\n",
-       "      <td>4177.889542</td>\n",
+       "      <td>4480.79</td>\n",
+       "      <td>4177.89</td>\n",
        "      <td>141.9</td>\n",
        "      <td>119.3</td>\n",
        "      <td>104.4</td>\n",
        "      <td>96.49</td>\n",
+       "      <td>2.999983</td>\n",
+       "      <td>28.000027</td>\n",
+       "      <td>9.65</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -124,16 +124,16 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>8.169956e+10</td>\n",
-       "      <td>8.721929e+10</td>\n",
-       "      <td>556.836182</td>\n",
-       "      <td>1902.422150</td>\n",
-       "      <td>3497.974488</td>\n",
-       "      <td>3127.890598</td>\n",
+       "      <td>3497.97</td>\n",
+       "      <td>3127.89</td>\n",
        "      <td>383.6</td>\n",
        "      <td>322.7</td>\n",
        "      <td>269.7</td>\n",
        "      <td>239.80</td>\n",
+       "      <td>17.569124</td>\n",
+       "      <td>-11.877577</td>\n",
+       "      <td>23.98</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -148,16 +148,16 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.148700e+09</td>\n",
-       "      <td>1.336693e+09</td>\n",
-       "      <td>10872.292952</td>\n",
-       "      <td>12557.547850</td>\n",
-       "      <td>13048.960582</td>\n",
-       "      <td>14285.329777</td>\n",
+       "      <td>13048.96</td>\n",
+       "      <td>14285.33</td>\n",
        "      <td>156.7</td>\n",
        "      <td>156.1</td>\n",
        "      <td>134.6</td>\n",
        "      <td>121.90</td>\n",
+       "      <td>-61.955461</td>\n",
+       "      <td>17.223472</td>\n",
+       "      <td>12.19</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -172,20 +172,20 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.236274e+11</td>\n",
-       "      <td>5.947493e+11</td>\n",
-       "      <td>7708.099115</td>\n",
-       "      <td>5109.852245</td>\n",
-       "      <td>10385.964432</td>\n",
-       "      <td>13789.060425</td>\n",
+       "      <td>10385.96</td>\n",
+       "      <td>13789.06</td>\n",
        "      <td>138.5</td>\n",
        "      <td>124.9</td>\n",
        "      <td>118.7</td>\n",
        "      <td>112.70</td>\n",
+       "      <td>-64.967282</td>\n",
+       "      <td>-34.996496</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -196,50 +196,50 @@
        "3           3  Antigua and Barbuda           99.0        1.0        93.0   \n",
        "4           4            Argentina           97.9        1.0        85.2   \n",
        "\n",
-       "   Folk_Religions  Hindus  Jews  Muslims  Other_Religions  ...      gpd_2010  \\\n",
-       "0             1.0     1.0   1.0     80.3              1.0  ...  1.192692e+10   \n",
-       "1             1.0     1.0   1.0     97.9              1.0  ...  1.612073e+11   \n",
-       "2             4.2     1.0   1.0      1.0              1.0  ...  8.169956e+10   \n",
-       "3             3.6     1.0   1.0      1.0              1.0  ...  1.148700e+09   \n",
-       "4             1.0     1.0   1.0      1.0              1.0  ...  4.236274e+11   \n",
-       "\n",
-       "       gpd_2015  gdp_per_capita_2000  gdp_per_capita_2005  \\\n",
-       "0  1.138685e+10          1126.683340          2673.786584   \n",
-       "1  1.659793e+11          1765.027146          3113.094883   \n",
-       "2  8.721929e+10           556.836182          1902.422150   \n",
-       "3  1.336693e+09         10872.292952         12557.547850   \n",
-       "4  5.947493e+11          7708.099115          5109.852245   \n",
+       "   Folk_Religions  Hindus  Jews  Muslims  Other_Religions  ...  \\\n",
+       "0             1.0     1.0   1.0     80.3              1.0  ...   \n",
+       "1             1.0     1.0   1.0     97.9              1.0  ...   \n",
+       "2             4.2     1.0   1.0      1.0              1.0  ...   \n",
+       "3             3.6     1.0   1.0      1.0              1.0  ...   \n",
+       "4             1.0     1.0   1.0      1.0              1.0  ...   \n",
        "\n",
        "   gdp_per_capita_2010  gdp_per_capita_2015  mortality_rate_2000  \\\n",
-       "0          4094.348386          3952.802538                106.1   \n",
-       "1          4480.786318          4177.889542                141.9   \n",
-       "2          3497.974488          3127.890598                383.6   \n",
-       "3         13048.960582         14285.329777                156.7   \n",
-       "4         10385.964432         13789.060425                138.5   \n",
+       "0              4094.35              3952.80                106.1   \n",
+       "1              4480.79              4177.89                141.9   \n",
+       "2              3497.97              3127.89                383.6   \n",
+       "3             13048.96             14285.33                156.7   \n",
+       "4             10385.96             13789.06                138.5   \n",
        "\n",
-       "   mortality_rate_2005  mortality_rate_2010  mortality_rate_2015  \n",
-       "0                105.7                103.5                92.24  \n",
-       "1                119.3                104.4                96.49  \n",
-       "2                322.7                269.7               239.80  \n",
-       "3                156.1                134.6               121.90  \n",
-       "4                124.9                118.7               112.70  \n",
+       "   mortality_rate_2005  mortality_rate_2010  mortality_rate_2015  Longitude  \\\n",
+       "0                105.7                103.5                92.24  19.999962   \n",
+       "1                119.3                104.4                96.49   2.999983   \n",
+       "2                322.7                269.7               239.80  17.569124   \n",
+       "3                156.1                134.6               121.90 -61.955461   \n",
+       "4                124.9                118.7               112.70 -64.967282   \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "    Latitude  mortality_rate  mortality_state  \n",
+       "0  41.000028            9.22                1  \n",
+       "1  28.000027            9.65                1  \n",
+       "2 -11.877577           23.98                3  \n",
+       "3  17.223472           12.19                2  \n",
+       "4 -34.996496           11.27                2  \n",
+       "\n",
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mortality_data = pd.read_csv(\"cleaned_data/data_by_country.csv\")\n",
+    "mortality_data = pd.read_csv(\"../cleaned_data/data_by_country.csv\")\n",
     "mortality_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "9effb178",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "[139 rows x 1 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "4256f674",
    "metadata": {},
    "outputs": [],
@@ -358,30 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "705ee658",
    "metadata": {},
    "outputs": [],
    "source": [
     "# used code from https://www.geeksforgeeks.org/how-to-find-longitude-and-latitude-for-a-list-of-regions-or-country-using-python/\n",
     "\n",
-    "# declare an empty list to store\n",
-    "# latitude and longitude of values \n",
-    "# of city column\n",
+    "# declare an empty list to store latitude and longitude of values of city column\n",
     "longitude = []\n",
     "latitude = []\n",
     "   \n",
-    "# function to find the coordinate\n",
-    "# of a given city \n",
+    "# function to find the coordinate of a given city \n",
     "def findGeocode(country):\n",
     "       \n",
-    "    # try and catch is used to overcome\n",
-    "    # the exception thrown by geolocator\n",
-    "    # using geocodertimedout  \n",
+    "    # try and catch is used to overcome the exception thrown by geolocator using geocodertimedout  \n",
     "    try:\n",
     "          \n",
-    "        # Specify the user_agent as your\n",
-    "        # app name it should not be none\n",
+    "        # Specify the user_agent as your app name it should not be none\n",
     "        geolocator = Nominatim(user_agent=\"Mort_Pred\")\n",
     "          \n",
     "        return geolocator.geocode(country)\n",
@@ -390,24 +384,16 @@
     "          \n",
     "        return findGeocode(country)    \n",
     "  \n",
-    "# each value from city column\n",
-    "# will be fetched and sent to\n",
-    "# function find_geocode   \n",
+    "# each value from city column will be fetched and sent to function find_geocode   \n",
     "for i in (country_df[\"Country\"]):\n",
-    "      \n",
     "    if findGeocode(i) != None:\n",
-    "           \n",
     "        loc = findGeocode(i)\n",
     "          \n",
-    "        # coordinates returned from \n",
-    "        # function is stored into\n",
-    "        # two separate list\n",
+    "        # coordinates returned from function is stored into two separate list\n",
     "        latitude.append(loc.latitude)\n",
     "        longitude.append(loc.longitude)\n",
     "       \n",
-    "    # if coordinate for a city not\n",
-    "    # found, insert \"NaN\" indicating \n",
-    "    # missing value \n",
+    "    # if coordinate for a city not found, insert \"NaN\" indicating missing value \n",
     "    else:\n",
     "        latitude.append(np.nan)\n",
     "        longitude.append(np.nan)"
@@ -415,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "772fc18e",
    "metadata": {},
    "outputs": [
@@ -1085,8 +1071,8 @@
        "    <tr>\n",
        "      <th>106</th>\n",
        "      <td>Portugal</td>\n",
-       "      <td>-7.889626</td>\n",
-       "      <td>40.033263</td>\n",
+       "      <td>-8.135352</td>\n",
+       "      <td>39.662165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>107</th>\n",
@@ -1392,7 +1378,7 @@
        "103                      Peru  -75.045851  -6.869970\n",
        "104               Philippines  122.731210  12.750349\n",
        "105                    Poland   19.134422  52.215933\n",
-       "106                  Portugal   -7.889626  40.033263\n",
+       "106                  Portugal   -8.135352  39.662165\n",
        "107                     Qatar   51.229529  25.333698\n",
        "108                   Romania   24.685923  45.985213\n",
        "109                    Rwanda   30.064436  -1.964663\n",
@@ -1427,7 +1413,7 @@
        "138                  Zimbabwe   29.746841 -18.455496"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "c9a476a5",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1442,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "b52ffe76",
    "metadata": {},
    "outputs": [
@@ -1480,7 +1466,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "9b43ef92",
    "metadata": {},
    "outputs": [],
